updated for support up through MW 1.29
thanks to patches from Wpmirrordev for part of this update

add dbname, page_linked_update, page_lang fields, account
for different field orders in xml, do initialization of
revision fields at beginning of retrieval

Change-Id: I90d9e5f113c61940cade3847e856541a26791c2b

--- a/xmlfileutils/CHANGELOG
+++ b/xmlfileutils/CHANGELOG
@@ -1,3 +1,11 @@
+10 April 2017 Ariel T. Glenn <ariel@wikimedia.org>
+
+   Release 0.0.3
+
+    Updated for compatibility with MediaWiki up through
+    version 1.29; bump version. Thanks to Kent L. Miller
+    for earlier patches that updated through MW 1.24.
+
 29 May 2013 Kent L. Miller <wpmirrordev@gmail.com>
 
    Release 0.0.2-1
