convert dump scripts to python3
The big change:
removed MyPopen because Popen.communicate() now supports a timeout
as of python 3.5, updated docs to reflect that change

Also includes small pylint fixes:
* quit using if len(blah) instead of if blah:
* fix up some if: return elif: clauses
* fix some unused var names
* change some if a == b or a == c or a ==d to if a in [b, c, d]
* fix two module names, other even smaller pylint fixups

Also fixed a small amount of bitrot in dumpadmin.py, tweaked logging
here and there

Bug: T210989
Change-Id: I78c3ffa242ecf300876ca6be08ca7828d25bc84e

--- a/xmldumps-backup/README
+++ b/xmldumps-backup/README
@@ -52,10 +52,10 @@ worker.py
 monitor.py
 - Generates the site-wide index summary and removes stale locks.
 
-WikiDump.py
+wikidump.py
 - Shared classes and functions
 
-CommandManagement.py
+commandmanagement.py
 - Classes for running multiple commands at the same time, used for running some phases
   of the dumps in multiple pieces at the same time, for speed
 
