--- a/xmldumps-backup/fixup_scripts/README
+++ b/xmldumps-backup/fixup_scripts/README
@@ -17,6 +17,10 @@ do_hashes.sh - generate sha1 and md5 hash files for either 7z or bz2 page
     content full history files, in batches, skipping over files for which
     the md5 or sha1 hash exists at the time of the specific batch
 
+do_noops.sh - run the noop job on the specified wikis; this is typically
+    needed if you do a mass alteration or removal of status files and
+    need to regenerate them
+
 do_pagerange_content_jobs.sh - generate bz2 page content full history files
     in parallel, with prefetch; page ranges for workers are generated first
     so that each worker completes in a reasonable number of hours, and with
